# cpppoetry

./: .gitignore  index.md
core/: CMakeLists.txt  cpppoetry.cpp  cpppoetry.h
