# CMakeList.txt : CMake project for cpppoetry, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("cpppoetry")

# Add source to this project's executable.
add_executable (cpppoetry "cpppoetry.cpp" "cpppoetry.h")

# TODO: Add tests and install targets if needed.
